# gridpool-sv2-pool

./: .gitleaks.toml  AGENTS.md  CONTRIBUTING.md  GRIDPOOL.md  README.md  rust-toolchain.toml
.github/workflows/: auto-rebase.yaml  binary-release.yaml  ci.yaml  docker-release.yaml  integration-tests.yaml  msrv.yaml  release-apps.yaml  semver-check.yaml  stratum-core-sync.yaml  tests.yaml  validate-openapi.yaml
bitcoin-core-sv2/: Cargo.toml  README.md
bitcoin-core-sv2/examples/: tdp_logger_v30x.rs  tdp_logger_v31x.rs
bitcoin-core-sv2/src/: lib.rs
bitcoin-core-sv2/src/job_declaration_protocol/: mod.rs
bitcoin-core-sv2/src/template_distribution_protocol/: error.rs  template_data.rs
bitcoin-core-sv2/src/unix_capnp/v30x/job_declaration_protocol/: handlers.rs  mod.rs  monitors.rs
bitcoin-core-sv2/src/unix_capnp/v30x/template_distribution_protocol/: handlers.rs  mod.rs  monitors.rs  template_data.rs
bitcoin-core-sv2/src/unix_capnp/v31x/job_declaration_protocol/: handlers.rs  mod.rs  monitors.rs
bitcoin-core-sv2/src/unix_capnp/v31x/template_distribution_protocol/: handlers.rs  mod.rs  monitors.rs  template_data.rs
docker/: Dockerfile  docker-compose.yml
integration-tests/: Cargo.toml
integration-tests/lib/: mock_roles.rs  prometheus_metrics_assertions.rs  template_provider.rs
integration-tests/tests/: translator_integration.rs
miner-apps/translator/: Cargo.toml  README.md
pool-apps/pool/: Cargo.toml  README.md
scripts/: README.md  build-all-workspaces.sh  clippy-fmt-and-test.sh
stratum-apps/: Cargo.toml
stratum-apps/src/: payout.rs
(+31 files in other folders)
