[package]
name = "bitcoin_core_sv2"
description = "A library to get Stratum V2 Template Distribution Protocol from Bitcoin Core over IPC"
version = "0.4.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["The Stratum V2 Developers"]
homepage = "https://stratumprotocol.org"
documentation = "https://docs.rs/bitcoin_core_sv2"
readme = "README.md"
keywords = ["stratum", "mining", "bitcoin", "bitcoin-core"]

[dependencies]
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tokio = { version = "1.44.1", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["codec", "compat"] }
async-channel = "1.5.1"

# Bitcoin Core v30.x IPC dependencies
bitcoin_capnp_types_v30 = { package = "bitcoin-capnp-types", version = "0.1.2" }

# Bitcoin Core v31.x IPC dependencies
bitcoin_capnp_types_v31 = { package = "bitcoin-capnp-types", version = "0.2.1" }

stratum-core = { version = "0.5.0" }
